...
            BodyM(
                text = stringResource(R.string.widgets__widget__edit_description).replace(
                    "{name}",
                    stringResource(R.string.widgets__news__name)
                ),
                color = Colors.White64,
                modifier = Modifier.testTag("edit_description")
            )

            VerticalSpacer(32.dp)

            Row(
                horizontalArrangement = Arrangement.spacedBy(16.dp),
...
            ) {
                CaptionB(
                    text = stringResource(R.string.widgets__widget__source),
                    color = Colors.White64,
                    modifier = Modifier
                        .weight(1f)
                        .testTag("source_label")
                )

                CaptionB(
                    text = "synonym.to",
                    color = Colors.White64,
                    modifier = Modifier.testTag("source_text")
...
